--- a/aspfront/package.json
+++ b/aspfront/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@tinymce/tinymce-react": "^4.3.0",
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.31",
     "@types/react": "^18.2.6",
@@ -15,6 +16,7 @@
     "bootstrap": "^5.3.0",
     "classnames": "^2.3.2",
     "formik": "^2.2.9",
+    "fs-extra": "^11.1.1",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-confirm-bootstrap": "^5.3.1",
@@ -24,6 +26,7 @@
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
+    "tinymce": "^6.5.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
     "yup": "^1.1.1"
